[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vex-tm-bridge"
version = "0.1.0"
description = "An unofficial Python bridge for interacting with VEX Tournament Manager software."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "pywinauto>=0.6.9",
    "requests>=2.32.3",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.0",
    "build>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vex_tm_bridge*"]

[tool.black]
line-length = 120
target-version = ['py311']

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
]
